<resources>
    <string name="app_name">樱花动漫</string>
    <string name="home_fragment_header_search">搜索</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="unknown_route">未知跳转：%s</string>
    <string name="website_format_error">网址格式错误，请输入完整的网址</string>
    <string name="anime_detail_alias">别名：</string>
    <string name="anime_detail_index">索引：%s</string>
    <string name="anime_detail_type">类型：</string>
    <string name="anime_detail_tag">标签：</string>
    <string name="get_data_failed">获取数据失败！</string>
    <string name="delete_failed">刪除失败！</string>
    <string name="delete_succeed">刪除成功！</string>
    <string name="search_activity_tip">“%1$s”搜索结果，加载了%2$d条</string>
    <string name="search_input_keywords_tips">请输入搜索关键字</string>
    <string name="home">首页</string>
    <string name="everyday_anime">每日更新</string>
    <string name="everyday_anime_list">每日更新列表</string>
    <string name="rank_list">排行榜</string>
    <string name="anime_classify">动漫分类</string>
    <string name="year_month_anime">新番列表：%s</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="uncheck_update">未检查</string>
    <string name="check_update_summary">检查更新 %s</string>
    <string name="current_version">当前版本 %s</string>
    <string name="check_update_failed">检查更新失败</string>
    <string name="delay_update">暂不更新</string>
    <string name="checking_update">正在检查更新…</string>
    <string name="find_new_version">发现新版本</string>
    <string name="is_latest_version">已是最新版本</string>
    <string name="github">GitHub</string>
    <string name="data_source_url">当前数据源地址</string>
    <string name="data_source_info">数据源信息</string>
    <string name="open_source_licenses">开放源代码许可</string>
    <string name="search_history">搜索历史</string>
    <string name="download_anime">缓存动漫(请于24h内删除)</string>
    <string name="anime_download_path">视频缓存目录</string>
    <string name="no_download_video">没有缓存视频</string>
    <string name="read_download_data_file">正在读取缓存文件…</string>
    <string name="play_list">播放列表</string>
    <string name="play_speed">倍速</string>
    <string name="device_list">设备列表</string>
    <string name="play_on_tv">投屏</string>
    <string name="sending_data_please_wait">正在发送数据，请稍候…</string>
    <string name="license">许可证</string>
    <string name="license_name">名称</string>
    <string name="dlna_step">投屏步骤</string>
    <string name="share_to">分享至</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="copy_url">复制链接</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="not_install_qq">未安装QQ</string>
    <string name="not_install_wechat">未安装微信</string>
    <string name="not_install_weibo">未安装微博</string>
    <string name="share_unknown_error">分享出现未知异常</string>
    <string name="already_copy_to_clipboard">已复制到剪贴板</string>
    <string name="more">更多</string>
    <string name="my_favorite">我的追番</string>
    <string name="no_favorite">没有追番记录</string>
    <string name="watch_history">观看历史</string>
    <string name="no_history">没有观看历史</string>
    <string name="delete_all_history_summary">清空所有历史记录，包括搜索历史、观看历史和观看进度，%d条</string>
    <string name="confirm_delete_all_history">确定要删除所有历史记录？包括搜索历史、观看历史和观看进度</string>
    <string name="delete_all_history">清空历史记录</string>
    <string name="delete_all_history_succeed">清空所有历史记录成功！</string>
    <string name="delete_all_history_failed">清空所有历史记录失败！</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_summary">清空所有缓存，不包括缓存视频，%s</string>
    <string name="clear_cache_succeed">清空缓存成功！</string>
    <string name="clear_cache_failed">清空缓存失败！</string>
    <string name="detail_page">详情页</string>
    <string name="load_data_failed_click_to_retry">加载数据失败，点击重试</string>
    <string name="choose_episode">选集</string>
    <string name="test_device">测试设备</string>
    <string name="app_icon_describe">APP图标修改自动漫《日常》</string>
    <string name="favorite_succeed">追番成功</string>
    <string name="remove_favorite_succeed">取消追番成功</string>
    <string name="parsing_video">解析视频中…</string>
    <string name="shortcuts_favorite_long">我的追番</string>
    <string name="shortcuts_favorite_short">追番</string>
    <string name="shortcuts_everyday_long">每日更新动漫</string>
    <string name="shortcuts_everyday_short">日更动漫</string>
    <string name="shortcuts_download_long">缓存番剧</string>
    <string name="shortcuts_download_short">缓存番剧</string>
    <string name="attention">声明</string>
    <string name="ask">询问</string>
    <string name="update_widget">正在更新小组件</string>
    <string name="widget_everyday_anime">每日更新动漫</string>
    <string name="vertical_reverse">上下镜像</string>
    <string name="horizontal_reverse">左右镜像</string>
    <string name="reverse">镜像</string>
    <string name="no_reverse">正常</string>
    <string name="bottom_progress">底部进度条</string>
    <string name="ok">确定</string>
    <string name="agree">同意</string>
    <string name="disagree_and_exit">不同意并退出</string>
    <string name="no_more_info">没有更多了</string>
    <string name="warning">警告</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="clean">清理</string>
    <string name="media_codec">硬解码</string>
    <string name="open_by_external_player">外部播放器</string>
    <string name="choose_video_player">请选择视频播放器</string>
    <string name="matched_app_not_found">没有找到匹配的程序</string>
    <string name="skip_by_website">根据网址跳转</string>
    <string name="input_a_website">请输入网址</string>
    <string name="advanced">高级</string>
    <string name="old_path">旧</string>
    <string name="do_not_finish_the_page_when_parse_download_data">缓存失败，解析缓存数据时请勿关闭页面</string>
    <string name="restore_screen">还原屏幕</string>
    <string name="touch_down_high_speed"><![CDATA[>> %s倍播放]]></string>
    <string name="play_position_tip">上次看到：</string>
    <string name="send_a_danmaku">发个弹幕吧…</string>
    <string name="send_a_danmaku_is_disabled">发送弹幕功能不可用</string>
    <string name="send_danmaku_failed">发送弹幕失败，%s</string>
    <string name="please_input_danmaku_text">请输入弹幕内容！</string>
    <string name="danmaku_exist_shield_content">存在被屏蔽文字，发送失败！</string>
    <string name="custom_data_source">自定义数据源：%s</string>
    <string name="config_custom_data_source">配置自定义数据源</string>
    <string name="custom_data_source_describe">具体使用方法请访问GitHub仓库</string>
    <string name="restart">重启</string>
    <string name="custom_data_source_tip">请务必确保ads包无恶意代码\n需要重启App，是否继续？</string>
    <string name="ask_overwrite_file">存在同名文件，是否覆盖？</string>
    <string name="overwrite_file">覆盖原有文件</string>
    <string name="overwrite_file_and_restart">覆盖原有文件并重启</string>
    <string name="do_not_overwrite_file">不要覆盖，取消导入</string>
    <string name="default_data_source">默认数据源</string>
    <string name="import_data_source">确认导入数据源？</string>
    <string name="import_data_source_failed">导入数据源失败</string>
    <string name="import_data_source_success">导入数据源成功：%s</string>
    <string name="import_data_source_label">导入数据源</string>
    <string name="play_video_label">播放音视频</string>
    <string name="ask_delete_data_source">确认删除此数据源？</string>
    <string name="request_restart_app">需要重启App，是否继续？</string>
    <string name="skin_center">皮肤中心</string>
    <string name="download_manager">下载管理</string>
    <string name="data_source_jar_version_name">版本：%s</string>
    <string name="data_source_jar_version_code">版本代号：%s</string>
    <string name="app_version_name">%s</string>
    <string name="app_version_code">代号: %d</string>
    <string name="user_notice_update">使用须知更新！</string>
    <string name="user_notice">使用须知</string>
    <string name="notice_activity_error_param">跳转到通知界面错误，参数传递不正确！</string>
    <string name="play_video_now">立即播放</string>
    <string name="replay_video">重新播放</string>
    <string name="jump_to_browser_http_warning">此网址使用HTTP协议，不能保证安全性，是否要继续打开浏览器访问？</string>
    <string name="jump_to_data_source_website_warning">访问网页造成的不良后果软件不负责！！！若要访问，请小心不要误触网页广告并谨慎下载来历不明的文件。</string>
    <string name="still_to_visit">仍要访问</string>
    <string name="input_custom_danmaku_url">输入自定义弹幕链接</string>
    <string name="input_danmaku_url">请输入弹幕链接</string>
    <string name="danmaku">弹幕</string>
    <string name="reset_danmaku_progress">还原</string>
    <string name="forward_danmaku_progress">+2s</string>
    <string name="rewind_danmaku_progress">-2s</string>
    <string name="cannot_rewind_over_10s">后退不能超过10秒！</string>
    <string name="cannot_forward_over_10s">前进不能超过10秒！</string>
    <string name="player_night_screen">夜间屏幕</string>
    <string name="dns_over_https">使用安全DNS</string>
    <string name="dns_server_describe">通过安全连接访问网站</string>
    <string name="select_dns_server">选择DNS提供商</string>
    <string name="custom_dns_server">自定义DNS提供商</string>
    <string name="custom_dns_server_dialog_title">自定义DNS提供商</string>
    <string name="custom_dns_server_describe">如：https://1.0.0.1/dns-query</string>
    <string name="config_data_source_tip">点击数据源条目可使用数据源，点击右上角按钮可恢复默认数据源，长按数据源条目可删除数据源</string>
    <string name="data_source_market_bottom_tip">请在“本地数据源”页面（左侧页面）点击使用已下载的数据源。显示已下载只表示已经下载到本地，不代表正在使用！</string>
    <string name="invalid_data_source_suffix">无效数据源文件后缀：%s</string>
    <string name="the_data_source_is_using_now">正在使用此数据源！</string>
    <string name="activity_is_not_config_data_source_activity">activity is not ConfigDataSourceActivity</string>
    <string name="close">关闭</string>
    <string name="danmaku_text_size_scale">弹幕字号</string>
    <string name="please_wait_video_loaded">请等待视频加载完毕…</string>
    <string name="dlna_volume">音量：%s</string>
    <string name="dlna_stop">停止投屏</string>
    <string name="dlna_pause">暂停播放</string>
    <string name="dlna_play">开始播放</string>
    <string name="dlna_seek_to">快进到%s</string>
    <string name="dlna_cast_failed">投屏失败了: %s</string>
    <string name="dlna_play_failed">投屏失败了: %s</string>
    <string name="dlna_pause_failed">暂停失败了: %s</string>
    <string name="dlna_stop_failed">停止失败了: %s</string>
    <string name="dlna_seen_to_failed">快进失败了: %s</string>
    <string name="dlna_init_data_error">数据接收错误！</string>
    <string name="danmaku_data_is_null_or_blank">弹幕数据为null或空！</string>
    <string name="danmaku_input_stream_is_null">弹幕输入流为null！</string>
    <string name="basic_settings">基本设置</string>
    <string name="play_settings">播放设置</string>
    <string name="show_player_bottom_progressbar">显示播放器底部进度条</string>
    <string name="auto_jump_to_last_position">自动跳转进度</string>
    <string name="auto_jump_to_last_position_summary">若上次未观看完，则自动跳转到上次的进度</string>
    <string name="switch_player_core">切换播放器内核</string>
    <string name="only_ijk_support_disable_media_codec">仅ijk内核支持关闭硬解</string>
    <string name="webdav_server_address">WebDAV服务器地址</string>
    <string name="webdav_password">WebDAV密码</string>
    <string name="webdav_account">WebDAV账户</string>
    <string name="backup_to_cloud">备份至云端</string>
    <string name="backup_app_database_to_cloud">备份主数据库至云端 %s</string>
    <string name="backup_app_database_to_cloud_summary">包括我的追番、观看历史、搜索历史和缓存记录（非缓存视频）</string>
    <string name="restore_from_cloud">从云端恢复</string>
    <string name="restore_app_database_from_cloud">从云端恢复主数据库</string>
    <string name="restore_app_database_summary">当前我的追番、观看历史、搜索历史和缓存记录（非缓存视频）将被覆盖，此操作不可逆</string>
    <string name="webdav_credential_settings">WebDAV认证设置</string>
    <string name="home_fragment_menu_classify">动漫分类</string>
    <string name="home_fragment_menu_download">缓存</string>
    <string name="home_fragment_menu_favorite">我的追番</string>
    <string name="play_activity_menu_share">分享</string>
    <string name="play_activity_menu_download">缓存</string>
    <string name="play_activity_menu_more">更多</string>
    <string name="danmaku_mode">模式</string>
    <string name="danmaku_mode_bottom">底部</string>
    <string name="danmaku_mode_top">顶部</string>
    <string name="danmaku_mode_scroll">滚动</string>
    <string name="danmaku_color">弹幕颜色</string>
</resources>