<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.skyd.imomoe.view.component.preference.PreferenceCategory app:title="@string/basic_settings">
        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_arrow_circle_down_main_color_2_24_skin"
            app:key="download_path"
            app:title="@string/anime_download_path"
            tools:summary="0" />

        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_delete_main_color_2_24_skin"
            app:key="delete_all_history"
            app:summary="@string/delete_all_history_info"
            app:title="@string/delete_all_history" />

        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_sd_storage_main_color_2_24_skin"
            app:key="clear_cache"
            app:summary="@string/clear_cache_info"
            app:title="@string/clear_cache" />

        <com.skyd.imomoe.view.component.preference.CheckBoxPreference
            app:icon="@drawable/ic_nights_stay_main_color_2_24_skin"
            app:key="dark_mode_follow_system"
            app:persistent="false"
            app:title="@string/dark_mode_follow_system" />

        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_update_main_color_2_24_skin"
            app:key="update"
            app:title="@string/check_update"
            tools:summary="0" />

        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_category_main_color_2_24_skin"
            app:key="custom_data_source"
            app:summary="@string/custom_data_source_describe"
            app:title="@string/custom_data_source" />
    </com.skyd.imomoe.view.component.preference.PreferenceCategory>

    <com.skyd.imomoe.view.component.preference.PreferenceCategory app:title="@string/play_settings">
        <com.skyd.imomoe.view.component.preference.CheckBoxPreference
            app:icon="@drawable/ic_progress_main_color_2_24_skin"
            app:key="show_player_bottom_progressbar"
            app:persistent="false"
            app:title="@string/show_player_bottom_progressbar" />

        <com.skyd.imomoe.view.component.preference.CheckBoxPreference
            app:icon="@drawable/ic_east_main_color_2_24_skin"
            app:key="auto_jump_to_last_position"
            app:persistent="false"
            app:summary="@string/auto_jump_to_last_position_summary"
            app:title="@string/auto_jump_to_last_position" />

        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_developer_board_main_color_2_24_skin"
            app:key="player_core"
            app:title="@string/switch_player_core" />

        <com.skyd.imomoe.view.component.preference.CheckBoxPreference
            app:icon="@drawable/ic_memory_main_color_2_24_skin"
            app:key="media_codec"
            app:persistent="false"
            app:summary="@string/only_ijk_support_disable_media_codec"
            app:title="@string/media_codec" />
    </com.skyd.imomoe.view.component.preference.PreferenceCategory>

    <com.skyd.imomoe.view.component.preference.PreferenceCategory app:title="@string/advanced">
        <com.skyd.imomoe.view.component.preference.Preference
            app:icon="@drawable/ic_dns_main_color_2_24_skin"
            app:key="dns_server"
            app:summary="@string/dns_server_describe"
            app:title="@string/dns_over_https" />
    </com.skyd.imomoe.view.component.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>