<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_play_activity_share"
        android:enabled="true"
        android:icon="@drawable/ic_share_24"
        android:title="@string/play_activity_menu_share"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_play_activity_download"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_circle_down_24"
        android:title="@string/play_activity_menu_download"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_play_activity_more"
        android:enabled="true"
        android:icon="@drawable/ic_more_vert_24"
        android:title="@string/play_activity_menu_more"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
</menu>