<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_corner_bottom_dialog_12"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="13dp"
    android:paddingEnd="13dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="17dp"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="?attr/colorOnSurface" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dlna"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/play_on_tv"
            android:textColor="?attr/colorOnSurface"
            app:drawableTint="?attr/colorOnSurface"
            app:drawableTopCompat="@drawable/ic_live_tv_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_in_other_player"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/open_by_external_player"
            android:textColor="?attr/colorOnSurface"
            app:drawableTint="?attr/colorOnSurface"
            app:drawableTopCompat="@drawable/ic_play_circle_24" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cancel_more"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="17dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorOnSurface" />
</LinearLayout>